bug-5 está com a formatação errada, no css td text-align: center

--- a/modulo02/css-bugfixes/index.css
+++ b/modulo02/css-bugfixes/index.css
@@ -100,6 +100,9 @@ div:last-child {
 table {
     width: 60%;
 }
+td {
+    text-align: center;
+}
 
 td button {
     background-color: #fadf63;
